--- a/controllers/index.html
+++ b/controllers/index.html
@@ -42,32 +42,36 @@
 					size: 50,
 					image: 'http://mygame.com/buttons/0.png',
 					x: 10,
-					y: 100
+					color: "#fcf",
+					y: 10
 				},
 				b: {
 					type: 'button',
 					size: 50,
 					image: 'http://mygame.com/buttons/0.png',
 					x: 10,
-					y: 200
+					color: "#cff",
+					y: 70
 				},
 				x: {
 					type: 'button',
 					size: 50,
 					image: 'http://mygame.com/buttons/0.png',
+					color: "#ffc",
 					x: 10,
-					y: 300
+					y: 130
 				},
 				y: {
 					type: 'button',
 					size: 50,
+					color: "#ccf",
 					image: 'http://mygame.com/buttons/0.png',
 					x: 10,
-					y: 400
+					y: 190
 				},
 				pad: {
 					type: 'dpad',
-					size: 50,
+					size: 100,
 					image: 'http://mygame.com/buttons/1.png',
 					x: 100,
 					y: 10
@@ -77,7 +81,7 @@
 					size: 50,
 					image: 'http://mygame.com/buttons/1.png',
 					x: 100,
-					y: 10
+					y: 150
 				}
 			};
 
