--- a/client/test.html
+++ b/client/test.html
@@ -3,36 +3,65 @@
 <head>
   <title>gamepadjoyjoy test</title>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="underscore-min.js"></script>
-  <script src="backbone-min.js"></script>
+  <script src="http://10.0.2.102:5000/socket.io/socket.io.js"></script>
+  <script src="resources/underscore-min.js"></script>
+  <script src="resources/backbone-min.js"></script>
+  <script src="resources/gamepad.js"></script>
   <script src="client.js"></script>
+  <link rel="stylesheet" href="resources/gamepad.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
   <script type="text/javascript">
    var gamepadClient = new GamepadJoyJoy();
    
-   var layout = [{
-      type: 'button'
+   var layout = {
+     a: {
+      type: 'button',
       size: 50,
       image: 'http://mygame.com/buttons/0.png',
       x: 10,
       y: 100
-    },{
-      type: 'dpad'
+    },
+    b: {
+      type: 'button',
+      size: 50,
+      image: 'http://mygame.com/buttons/0.png',
+      x: 10,
+      y: 200
+    },
+    x: {
+      type: 'button',
+      size: 50,
+      image: 'http://mygame.com/buttons/0.png',
+      x: 10,
+      y: 300
+    },
+    y: {
+      type: 'button',
+      size: 50,
+      image: 'http://mygame.com/buttons/0.png',
+      x: 10,
+      y: 400
+    },
+    pad: {
+      type: 'dpad',
       size: 50,
       image: 'http://mygame.com/buttons/1.png',
       x: 100,
       y: 10
-    },{
-      type: 'joy'
+    },
+    joy: {
+      type: 'joy',
       size: 50,
       image: 'http://mygame.com/buttons/1.png',
       x: 100,
       y: 10
-    }];
+    }};
    
+   var controller = null;
    gamepadClient.bind('controllerConnected', function(gamepad){
        console.log('new controller: '+gamepad);
-       gamepad.setLayout(layout)
+       gamepad.setLayout(layout);
+       controller = gamepad;
    });
    
    gamepadClient.bind('controllerDisconnected', function(gamepad){
@@ -46,6 +75,28 @@
 </head>
 <body>
   <h1>gamepadjoyjoy test</h1>
+  
+  <ul id="xboxController">
+		<li id="xBoxLeftStick" class="stick"><span></span></li>
+		<li id="xBoxRightStick" class="stick"><span></span></li>
+		<li id="xBoxBackButton" class="button"></li>
+		<li id="xBoxHomeButton" class="button"></li>
+		<li id="xBoxStartButton" class="button"></li>
+		<ul id="dpad">
+			<li id="xBoxDpadUp" class="button"></li>
+			<li id="xBoxDpadDown" class="button"></li>
+			<li id="xBoxDpadLeft" class="button"></li>
+			<li id="xBoxDpadRight" class="button"></li>
+		</ul>
+		<ul id="letterButtons">
+			<li id="xBoxAButton" class="button">A</li>
+			<li id="xBoxBButton" class="button">B</li>
+			<li id="xBoxXButton" class="button">X</li>
+			<li id="xBoxYButton" class="button">Y</li>
+		</ul>
+		<li id="xBoxLbButton" class="button"></li>
+		<li id="xBoxRbButton" class="button"></li>
+	</ul>
   
 </body>
 </html>
