moved controller over into bridge

--- a/bridge/public/gamepad/index.html
+++ b/bridge/public/gamepad/index.html
@@ -8,12 +8,17 @@
         <script src="js/vendor/underscore.min.js"></script>
         <script src="js/vendor/backbone.min.js"></script>
 
+        <script src="http://localhost:5000/socket.io/socket.io.js"></script>
+
+        <script src="js/controllerBridge.js"></script>
 
         <script src="js/gamepad.js"></script>
 
         <script src="js/buttons/core.js"></script>
         <script src="js/buttons/dpad.js"></script>
         <script src="js/buttons/joystick.js"></script>
+
+
 
 
     </head>
