--- a/bridge/public/viewer/index.html
+++ b/bridge/public/viewer/index.html
@@ -10,8 +10,8 @@
 	<script>
 		var host = '';
 
-		if (window.location.host == 'productionhost.com') {
-			host = 'http://productionhost.com';
+		if (window.location.host == 'dev.wemakeawesomesh.it:5000') {
+			host = 'http://dev.wemakeawesomesh.it:5000';
 		} else {
 			host = 'http://localhost';
 		}
